[package]
name = "chat-server"
version = "0.1.0"
authors = ["Morgana <xly_tk@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web-actors = "3.0.0"
actix-web = "3"
actix-rt = "1"
actix-http = "2"
serde_json = "1.0"
serde = { version = "1.0.114", features = ["derive"] }
qstring = "0.7"
sanitize-filename = "0.2"
actix-multipart = "0.2"
futures = "0.3"
bytes = "0.5"
actix-files = "0.2"
log = "0.4"
chrono = "0.4"
fern = "0.5"
regex = "1.3"
rand = "0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }